# pytest-insight

./: .gitignore  .pre-commit-config.yaml  Areas for improvement in Comparison.md  CONTRIBUTING.md  EXAMPLES.ipynb  INSIGHT_CONSISTENCY_GUIDE.md  InsightIsEverything.md  README.md  README_WRAPPER.md  Sandbox.py  Testing_TODO.md  alpha_release_notes.md  analyze_test_data.py  backfill_profile.py  console_section_example.ini  curls.yml  dev_playground.py  health_metrics_methods.py  modify_default_json.py  pattern-matching-in-pytest-insight.md  pyproject.toml  pytest-insight.toml  pytest.ini  repo_zip.sh  server.py  some_notes.md  test_rerun_display.py  test_storage.py  tox-multi-extras-guide.md  tox.ini  v2.docx  valuable metrics.md
.streamlit/: config.toml  style.css
demo-tests/: conftest.py  test_0.py  test_errors.py  test_random_results.py  test_warnings.py
demo-tests/orig/: test_1.py  test_random_results.py
demos/: interactive_tour.py
demos/notebooks/: analyze_insights.ipynb  compare_examples.ipynb  query_deep_dive.ipynb
docs/: 00_README.md  01_CONCEPTUAL_FRAMEWORK.md  04_CLI_GUIDE.md  06_DASHBOARD_GUIDE.md  07_API_EXPLORER.md  08_API.md  11_TEST_METRICS_EXPLAINED.md  API.md  DESIGN.md  INTERACTIVE_SHELL_TUTORIAL.md  QUERY_COMPARE_ANALYZE.md  README_CLI.md  README_DASHBOARD.md  SESSION_MATCHING.md  SIMPLE_FILE_EXCHANGE.md  STORAGE.md  TODO.md  The pytest-insight Dynamic API.md  available_insights.md  cohesiveness.md  configurable_insights.md  filtering_and_comparison.md  insight_classes.md
docs/examples/: curls.md
docs/implementation_details/: two-tier-api.md
docs/v1/: 00_README.md  01_CONCEPTUAL_FRAMEWORK.md  02_ARCHITECTURE_OVERVIEW.md  03_STORAGE.md  05_INTERACTIVE_SHELL_TUTORIAL.md  10_METRIC_STYLE_GUIDE.md  12_HTML_REPORTS.md  The pytest-insight Dynamic API.md
examples/: generate_example_data.py  run_examples.py  tutorial.py
junk/: profile_backup.py  profile_explorer.py  run_metrics_server.py  storage_challenge.md
junk/pytest_insight_old/: __main__.py  analytics.py  compare.py  config.py  constants.py  db_generator.py  dimensional_comparator.py  dimensions.py  filters.py  models.py  playground.py  plugin.py  storage.py
misc/: Expanded API areas.md  TODO-Analysis-Optimizations.md  dashboard  insight ideas.md  ideas.md  insights-html  output.html  output.raw  valuable metrics.md  web_dashboard.py
old/: dev_playground.py  grafana-dashboard-uploader.sh
pytest_insight/: Basic Query Building.md  __init__.py  __main__.py  analysis.py  analytics.py  api.py  api_instrospect.py  cli.py  cli_explorer.py  compare.py  comparison.py  compat.py  config.py  constants.py  core_api.py  dashboard_formatter.py  db_generator.py  demo_tree.md  filterable.py  filters.py  insight_api.py  insights.py  models.py  playground.py  plugin.py  pytest_internl_stuff.txt  query.py  server.py  server_launcher.py  server_launcher_dynamic.py  server_launcher_introspect.py  storage.py  terminal_config.toml  test_data.py  utils.py  web_api_instrospect.py
pytest_insight/api/: app.py  routes.py
pytest_insight/cli/: __init__.py  cli.py  cli_analyze.py  cli_api_explorer.py  cli_compare.py  cli_dashboard.py  cli_data.py  cli_dev.py  cli_main.py  cli_profile.py  cli_query.py  cli_report.py  cli_web.py  commands.py  dashboard_launcher.py  display.py  formatters.py  main.py
pytest_insight/core/: analysis.py  analyzer.py  api.py  comparison.py  config.py  core_api.py  filters.py  health_metrics.py  health_metrics_api.py  insight_base.py  insights.py  models.py  predictive.py  query.py  storage.py
pytest_insight/facets/: comparative.py  meta.py  predictive.py  session.py  summary.py  temporal.py  test.py  trend.py
pytest_insight/future_experimental/: performance.py  performance_cli.py
pytest_insight/query/: builder.py  comparison.py  query.py  query_builder.py
pytest_insight/reports/: html_report.py
pytest_insight/rest_api/: __init__.py  high_level_api.py  introspective_api.py
pytest_insight/scripts/: __init__.py  analyze_test_data.py  db_generator.py  introspect_api.py
pytest_insight/storage/: parquet_storage.py
pytest_insight/utils/: README_CLI.md  analyze_test_data.py  analyze_test_data_new.py  backfill_data.py  config.py  console_insights.py  db_generator.py  dev_cli.py  history_generator.py  insights_cli.py  logging_setup.py  metric_explanations.py  profile_factory.py  server_launcher.py  server_launcher_introspect.py  standalone_trend_plots.py  terminal_output.py  test_data.py  trend_generator.py  utils.py
pytest_insight/web/: dashboard.py  streamlit_adapter.py  visualization_core.py
pytest_insight/web_api/: __init__.py  web_api.py  web_api_introspect.py
pytest_insight_old/: __main__.py  compare.py  dimensions.py  grafana setup.txt  playground.py  plugin.py  time_utils.py
pytest_insight_old/api/: app.py  routes.py
pytest_insight_old/cli/: display.py  mermaid2.md
pytest_insight_old/core/: analyzer.py  api.py
pytest_insight_old/query/: comparison.py
pytest_insight_v1/: __main__.py  plugin.py
pytest_insight_v1/cli/: __init__.py  cli.py  cli_analyze.py  cli_api_explorer.py  cli_dashboard.py  cli_dev.py  cli_report.py
pytest_insight_v1/core/: __init__.py  analysis.py  comparison.py  config.py  core_api.py  health_metrics.py  health_metrics_api.py  insights.py  models.py  predictive.py  query.py  storage.py
scripts/: grafana-dashboard-uploader.sh  merge_tests.py  metrics_server.py  run_metrics_server.py
tests/: conftest.py  test_analysis.py  test_analyze_test_data.py  test_cli.py  test_comparison.py  test_config.py  test_dependencies.py  test_dimensions.py  test_file_locking.py  test_filters.py  test_health_metrics.py  test_insight_api.py  test_insights.py  test_logging.py  test_models.py  test_plugin.py  test_predictive.py  test_query.py  test_reliability_metrics.py  test_server.py  test_storage.py  test_sut_vs_testing_system.py  test_terminal_output.py  test_trend_filters.py  test_unified_cli.py  test_utils.py  test_web_api.py
tests-new/: conftest.py
tests-new/core/: test_api.py  (+2 more)
tests_copy/: conftest.py  test_cli.py  test_models.py  test_server.py
(+95 files in other folders)
