[project]
name = "pytest-insight"
version = "0.9.0"
description = "A pytest plugin for collecting, analyzing, and visualizing test and test-session metrics"
readme = "README.md"
authors = [
    { name = "Jeff Wright", email = "jeff.washcloth@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    # Core plugin dependencies
    "pytest>=6.2.0",
    "typer>=0.15.0",
    "colorama>=0.4.6",
    "ijson>=3.3.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
# Dependencies for visualization, dashboards, and advanced analytics
visualize = [
    # Dashboard dependencies
    "streamlit>=1.22.0",
    "pandas>=1.5.0",
    "plotly>=5.13.0",
    "scikit-learn>=1.2.0",
    # API Explorer dependencies
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "requests>=2.28.0",
    "python-multipart>=0.0.6",
    # HTML Report dependencies
    "jinja2>=3.1.2",
    "markdown>=3.4.0",
    "networkx>=3.2.1",
]

# Dependencies for development
dev = [
    # Build tools
    "hatch>=1.14.0",
    "build>=0.10.0",

    # Testing
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-rerunfailures>=12.0",

    # Linting and formatting
    "pre-commit>=3.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "pyflakes>=3.0.0",
    "ruff>=0.0.270",
]

# All dependencies combined
all = [
    "pytest-insight[visualize,dev]",
]

[project.entry-points.pytest11]
insight = "pytest_insight.plugin"

[project.scripts]
# New unified CLI command
insight = "pytest_insight.__main__:app"

# Legacy commands (will be deprecated in future versions)
insights = "pytest_insight.utils.analyze_test_data:main"
insights-new = "pytest_insight.utils.analyze_test_data_new:main"
insight-gen = "pytest_insight.utils.db_generator:app"
insight-api = "pytest_insight.utils.server_launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["E", "F", "I"]
ignore = ["E501", "E722"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "tox>=4.25.0",
]
