[project]
name = "pytest-insight"
version = "0.9.3"
description = "A pytest plugin for collecting, analyzing, and visualizing test and test-session metrics"
readme = "README.md"
authors = [
    { name = "Jeff Wright", email = "jeff.washcloth@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    # Core plugin dependencies
    "pytest>=6.2.0",
    "typer>=0.15.0",
    "colorama>=0.4.6",
    "ijson>=3.3.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "filelock>=3.12.0",
    "sparklines>=0.5.0",
    "tabulate>=0.9.0",
    "tomli>=2.2.1",
    "ipython>=8.18.1",
]

[project.optional-dependencies]
# Dependencies for visualization, dashboards, and advanced analytics
visualize = [
    # Dashboard dependencies
    "streamlit>=1.22.0",
    "pandas>=1.5.0",
    "plotly>=5.13.0",
    "scikit-learn>=1.2.0",
    # HTML Report dependencies
    "jinja2>=3.1.2",
    "markdown>=3.4.0",
    "networkx>=3.2.1",
]

explorer = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.2",
    "requests>=2.28.0",
    "python-multipart>=0.0.6",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0"
]

# Dependencies for development
dev = [
    # Build tools
    "hatch>=1.14.0",
    "build>=0.10.0",

    # Testing
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-rerunfailures>=12.0",

    # Linting and formatting
    "pre-commit>=3.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "pyflakes>=3.0.0",
    "ruff>=0.0.270",

]
# All dependencies combined
all = [
    "pytest-insight[visualize,dev,explorer]",
]

[project.entry-points.pytest11]
insight = "pytest_insight.plugin"

[project.scripts]
# New unified CLI command
insight = "pytest_insight.cli:app"
insight-explorer = "pytest_insight.cli_explorer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["E", "F", "I"]
ignore = ["E501", "E722"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "tox>=4.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "cli: CLI tests",
    "api: API tests",
    "e2e: End-to-end tests",
    "smoke: Smoke tests"
]
norecursedirs = [".git", "__pycache__", "pytest_insight_v1"]
